# Sentimental_NLP

./: .env  .gitignore  Dockerfile  LICENSE  README.md  Sentiment-LR.pickle  Sentiment-SVCM.pickle  index.js  inference.py  new_inference.py  nlp.js  package-lock.json  package.json  pyproject.toml  pythonscript.py  requirement.txt  requirements.txt  sentiment.js  sentimentAnalysis.js  sentimentValue.js  vercel.json
RandomCodeGen/: random.js
databasemodel/poll/: poll.js  pollResult.js
databasemodel/projectmodel/: project.js  sentiment.js
databasemodel/registrationmodel/: admin.js  usermodel.js
middleware/: verifyToken.js
module/: data.js  index.js
routers/: addPoll.js  delete.js  loginRouter.js  projectRouter.js  registrationRouter.js  sentiment.js  sentimetRouter.js  verificationRouter.js
