[tool.poetry]
name = "sentimental-nlp"
version = "0.1.0"
description = ""
authors = ["arun ar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
